--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ package-lock.json
 # backend
 /backend/node_modules
 /backend/package-lock.json
+/backend/.env
 
 # frontend
 /frontend/node_modules
